fix: overflow scroll is commented

--- a/src/App.css
+++ b/src/App.css
@@ -189,8 +189,8 @@ hr {
 }
 
 .postContent {
-  scroll-behavior: smooth;
-  overflow: scroll;
+  /* scroll-behavior: smooth;
+  overflow: scroll; */
   height: 200px;
 }
 
